# [#24022] Fixed extra table spacing on module positions
git-svn-id: file:///Users/oratzes/svn/kunena@4341 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
+++ b/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
@@ -404,6 +404,7 @@ PX		EM			PCT			PT
 	vertical-align: middle;
 }
 #Kunena td.ktopicmodule {
+	padding: 0;
 }
 #Kunena td.ktopicmoderation {
 	width: 1%;
